--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database url
-spring.datasource.url = jdbc:mysql://localhost:3306/blog
+spring.datasource.url = jdbc:mysql://localhost:3306/blog?useUnicode=yes&characterEncoding=UTF-8
 
 # Username and password
 spring.datasource.username = root
