--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password =
  # Show or not log for each sql query
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
